--- a/.github/workflows/build_family.yml
+++ b/.github/workflows/build_family.yml
@@ -3,10 +3,7 @@ name: Build family
 on:
   workflow_call:
     inputs:
-      family:
-        required: true
-        type: string
-      toolchain_url:
+      build-json:
         required: true
         type: string
 
@@ -16,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        family: ${{ inputs.family }}
+        family: ${{ fromJSON(inputs.build-json).family }}
     steps:
       - name: Checkout TinyUSB
         uses: actions/checkout@v4
@@ -29,7 +26,7 @@ jobs:
       - name: Setup Toolchain
         uses: ./.github/actions/setup_toolchain
         with:
-          toolchain_url: ${{ inputs.toolchain_url }}
+          toolchain_url: ${{ fromJSON(inputs.build-json).toolchain_url }}
 
       - name: Prepare to build
         uses: ./.github/actions/prepare_build
