--- a/.github/workflows/build_family.yml
+++ b/.github/workflows/build_family.yml
@@ -43,13 +43,15 @@ jobs:
       - name: Get Dependencies
         run: |
           sudo apt install -y ninja-build
+          pip install click
           python3 tools/get_deps.py ${{ matrix.family }}
-          echo >> $GITHUB_ENV "PICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk"
 
       - name: Build
         run: |
           OPTION=""
           if [[ "${{ inputs.toolchain }}" == *"clang"* ]]; then
-            OPTION="-DTOOLCHAIN=clang"
+            OPTION="--toolchain clang"
           fi
-          python tools/build_cmake.py ${{ matrix.family }} $OPTION
+          python tools/build_cmake.py -f ${{ matrix.family }} $OPTION
+        env:
+          PICO_SDK_PATH: ${{ github.workspace }}/pico-sdk
