build_cmake.py remove -f, families is narg=-1

--- a/.github/workflows/build_family.yml
+++ b/.github/workflows/build_family.yml
@@ -52,6 +52,6 @@ jobs:
           if [[ "${{ inputs.toolchain }}" == *"clang"* ]]; then
             OPTION="--toolchain clang"
           fi
-          python tools/build_cmake.py -f ${{ matrix.family }} $OPTION
+          python tools/build_cmake.py $OPTION ${{ matrix.family }}
         env:
           PICO_SDK_PATH: ${{ github.workspace }}/pico-sdk
