--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -52,7 +52,7 @@ jobs:
         run: python3 tools/get_deps.py ${{ matrix.family }}
 
       - name: Build
-        run: python3 tools/build_cmake.py -f ${{ matrix.family }} --toolchain iar
+        run: python3 tools/build_cmake.py --toolchain iar ${{ matrix.family }}
 
       - name: Test on actual hardware (hardware in the loop)
         run: |
