--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -104,4 +104,4 @@ jobs:
 
       - name: Test on actual hardware
         run: |
-          python3 test/hil/hil_test.py --board ${{ matrix.board }} hil_pi4.json
+          python3 test/hil/hil_test.py --board ${{ matrix.board }} pi4_esp32.json
