--- a/.github/workflows/hil_test.yml
+++ b/.github/workflows/hil_test.yml
@@ -50,17 +50,13 @@ jobs:
       - name: Parse HIL json
         id: parse_hil_json
         run: |
-          pip install click
           sudo apt install -y jq
-          # BOARD_LIST=$(jq -r '.boards[] | "-b " + .name' test/hil/hil_pi4.json | tr '\n' ' ')
-          # skip espressif_s3_devkitm for now
-          BOARD_LIST=$(jq -r '.boards[] | select(.name != "espressif_s3_devkitm") | "-b " + .name' test/hil/hil_pi4.json | tr '\n' ' ')
+          BOARD_LIST=$(jq -r '.boards[] | "-b " + .name' test/hil/hil_pi4.json | tr '\n' ' ')
           echo "BOARD_LIST=$BOARD_LIST"
           echo >> $GITHUB_ENV "BOARD_LIST=$BOARD_LIST"
           echo >> $GITHUB_OUTPUT "BOARD_LIST=$BOARD_LIST"
 
       - name: Checkout pico-sdk for rp2040
-        #if: contains($BOARD_LIST, 'rp2040')
         uses: actions/checkout@v4
         with:
           repository: raspberrypi/pico-sdk
@@ -69,6 +65,7 @@ jobs:
 
       - name: Get Dependencies
         run: |
+          pip install click
           sudo apt install -y ninja-build
           python3 tools/get_deps.py $BOARD_LIST
 
@@ -89,7 +86,7 @@ jobs:
   # Hardware in the loop (HIL)
   # Current self-hosted instance is running on an RPI4. For attached hardware checkout hil_pi4.json
   # ---------------------------------------
-  hil-test:
+  hil-pi4:
     if: github.repository_owner == 'hathach'
     needs: build
     runs-on: [self-hosted, rp2040, nrf52840, hardware-in-the-loop]
@@ -110,23 +107,18 @@ jobs:
           # reset VIA Labs 2.0 hub
           sudo usbreset 001/002
 
-      - name: Checkout test/hil
+      - name: Checkout TinyUSB
         uses: actions/checkout@v4
         with:
           sparse-checkout: test/hil
-
-      - run: echo $BOARD_LIST
 
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
           name: hil_pi4
-          path: hil_pi4
-          #path: cmake-build/cmake-build-${{ matrix.board }}
+          path: cmake-build
 
-      - run: |
-          tree hil_pi4
-
-#      - name: Test on actual hardware
-#        run: |
-#          python3 test/hil/hil_test.py --board ${{ matrix.board }} hil_pi4.json
+      - name: Test on actual hardware
+        run: |
+          tree cmake-build
+          python3 test/hil/hil_test.py $BOARD_LIST pi4.json
