--- a/.github/workflows/build_family.yml
+++ b/.github/workflows/build_family.yml
@@ -3,6 +3,9 @@ name: Build family
 on:
   workflow_call:
     inputs:
+      build-system:
+        required: true
+        type: string
       toolchain:
         required: true
         type: string
@@ -52,6 +55,6 @@ jobs:
           if [[ "${{ inputs.toolchain }}" == *"clang"* ]]; then
             OPTION="--toolchain clang"
           fi
-          python tools/build_cmake.py $OPTION ${{ matrix.family }}
+          python tools/build_cmake.py -s ${{ inputs.build-system }} $OPTION ${{ matrix.family }}
         env:
           PICO_SDK_PATH: ${{ github.workspace }}/pico-sdk
