--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,9 @@ on:
       - 'hw/**'
       - 'test/hil/**'
       - 'tools/get_deps.py'
+      - 'tools/build.py'
       - '.github/actions/**'
-      - '.github/workflows/build_cmake.yml'
+      - '.github/workflows/build.yml'
       - '.github/workflows/ci_set_matrix.py'
   pull_request:
     branches: [ master ]
@@ -22,8 +23,9 @@ on:
       - 'hw/**'
       - 'test/hil/**'
       - 'tools/get_deps.py'
+      - 'tools/build.py'
       - '.github/actions/**'
-      - '.github/workflows/build_cmake.yml'
+      - '.github/workflows/build.yml'
       - '.github/workflows/ci_set_matrix.py'
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
