--- a/.github/workflows/build_renesas.yml
+++ b/.github/workflows/build_renesas.yml
@@ -67,4 +67,4 @@ jobs:
       run: python3 tools/get_deps.py ${{ matrix.family }}
 
     - name: Build
-      run: python3 tools/build_make.py ${{ matrix.family }}
+      run: python3 tools/build.py -s make ${{ matrix.family }}
