--- a/.github/workflows/build_family.yml
+++ b/.github/workflows/build_family.yml
@@ -9,6 +9,9 @@ on:
       toolchain:
         required: true
         type: string
+      toolchain_url:
+        required: true
+        type: string
       build-json:
         required: true
         type: string
@@ -33,7 +36,7 @@ jobs:
         uses: ./.github/actions/setup_toolchain
         with:
           toolchain: ${{ inputs.toolchain }}
-          toolchain_url: ${{ fromJSON(inputs.build-json).toolchain_url }}
+          toolchain_url: ${{ inputs.toolchain_url }}
 
       - name: Checkout pico-sdk for rp2040
         if: contains(matrix.family, 'rp2040')
