--- a/.github/workflows/cifuzz.yml
+++ b/.github/workflows/cifuzz.yml
@@ -14,18 +14,23 @@ jobs:
  Fuzzing:
    runs-on: ubuntu-latest
    steps:
+   - name: Get dependencies
+     run: pip install click
+
    - name: Build Fuzzers
      id: build
      uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
      with:
        oss-fuzz-project-name: 'tinyusb'
        language: c++
+
    - name: Run Fuzzers
      uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
      with:
        oss-fuzz-project-name: 'tinyusb'
        language: c++
        fuzz-seconds: 600
+
    - name: Upload Crash
      uses: actions/upload-artifact@v4
      if: failure() && steps.build.outcome == 'success'
